--- a/main.html
+++ b/main.html
@@ -37,7 +37,17 @@
         <div id="storymap" class="container-fluid" >
             <div class="row">
                 <div class="col-sm-6 col-md-8 storymap-map"></div>
-                <div class="col-sm-6 col-md-4 storymap-story"></div>
+                <div class="col-sm-6 col-md-4 storymap-story">
+                            <section data-scene="scene1">
+                                        <h2>scene 1</h2>
+                            </section>
+                            <section data-scene="scene2">
+                                        <h2>scene 2</h2>
+                            </section>
+                            <section data-scene="scene3">
+                                        <h2>scene 3</h2>                                
+                            </section> 
+                        </div>
             </div>
         </div>
         </body>
