--- a/main.html
+++ b/main.html
@@ -12,7 +12,7 @@
         <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
 
         <!--add favicon for the web page-->
-        <link rel="shortcut icon" href="../../img/favicon.ico" type="image/x-icon">
+        <link rel="shortcut icon" href="./img/favicon.ico" type="image/x-icon">
 
         <!--Font-->
         <link href="https://fonts.googleapis.com/css?family=Cairo" rel="stylesheet">
@@ -32,6 +32,8 @@
 
         <!--story map plugin-->
         <script src="./src/storymap.2.5.js"></script>
+        <!-- script.js -->
+        <script src="./scripts/main.js"></script>
     </head>
     <body>
         <div id="storymap" class="container-fluid" >
