--- a/main.html
+++ b/main.html
@@ -1,56 +1,80 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <title>Hello World</title>
-        <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <!--add required stylesheets-->
-        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
-        <!--leaflet css-->
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/leaflet/1.4.0/leaflet.css">
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
-        <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
 
-        <!--add favicon for the web page-->
-        <link rel="shortcut icon" href="./img/favicon.ico" type="image/x-icon">
+<head>
+    <title>Hello World</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!--add required stylesheets-->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
+    <!--leaflet css-->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/leaflet/1.4.0/leaflet.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
 
-        <!--Font-->
-        <link href="https://fonts.googleapis.com/css?family=Cairo" rel="stylesheet">
+    <!--add favicon for the web page-->
+    <link rel="shortcut icon" href="./img/favicon.ico" type="image/x-icon">
 
-        <link rel="stylesheet" type="text/css" href="./src/storymap.2.5.css">
+    <!--Font-->
+    <link href="https://fonts.googleapis.com/css?family=Cairo" rel="stylesheet">
 
-        <!--add required libraries-->
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/leaflet/1.4.0/leaflet.js"></script>
-        <!--jquery and Popper-->
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.0/umd/popper.min.js"></script>
+    <link rel="stylesheet" type="text/css" href="./src/storymap.2.5.css">
 
-        <!--boostrap-->
-        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
-        <!--leaflet.ajax for asynchronously adding geojson data-->
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/leaflet-ajax/2.1.0/leaflet.ajax.min.js"></script>
+    <!--add required libraries-->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/leaflet/1.4.0/leaflet.js"></script>
+    <!--jquery and Popper-->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.0/umd/popper.min.js"></script>
 
-        <!--story map plugin-->
-        <script src="./src/storymap.2.5.js"></script>
-        <!-- script.js -->
-        <script src="./scripts/main.js"></script>
-    </head>
-    <body>
-        <div id="storymap" class="container-fluid" >
-            <div class="row">
-                <div class="col-sm-6 col-md-8 storymap-map"></div>
-                <div class="col-sm-6 col-md-4 storymap-story">
-                            <section data-scene="scene1">
-                                        <h2>scene 1</h2>
-                            </section>
-                            <section data-scene="scene2">
-                                        <h2>scene 2</h2>
-                            </section>
-                            <section data-scene="scene3">
-                                        <h2>scene 3</h2>                                
-                            </section> 
-                        </div>
+    <!--boostrap-->
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
+    <!--leaflet.ajax for asynchronously adding geojson data-->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/leaflet-ajax/2.1.0/leaflet.ajax.min.js"></script>
+
+    <!--story map plugin-->
+    <script src="./src/storymap.2.5.js"></script>
+    <!-- script.js -->
+    <script src="./scripts/main.js"></script>
+</head>
+
+<body>
+    <div id="storymap" class="container-fluid">
+        <div class="row">
+            <div class="col-sm-6 col-md-8 storymap-map"></div>
+            <div class="col-sm-6 col-md-4 storymap-story">
+                <section data-scene="scene1">
+                    <h2>scene 1</h2>
+                </section>
+                <section data-scene="scene2">
+                    <h2>scene 2</h2>
+                </section>
+                <section data-scene="scene3">
+                    <h2>scene 3</h2>
+                </section>
             </div>
         </div>
-        </body>
+    </div>
+</body>
+<script type="text/javascript">
+    $('#storymap').storymap({
+        scenes: scenes,
+        baselayer: layers.layer3,
+        legend: true,
+        loader: true,
+        flyto: true,
+        credits: "Build with <i class='material-icons' style='color: red; font-size: 10px;'>favorite</i> from Bo Zhao",
+        scalebar: true,
+        scrolldown: true,
+        progressline: true,
+        navwidget: true,
+        createMap: function() {
+            var map = L.map($(".storymap-map")[0], {
+                zoomControl: false
+            }).setView([44, -120], 7);
+            basemap = this.baselayer.layer.addTo(map);
+            return map;
+        }
+    });
+</script>
+
 </html>
