--- a/main.html
+++ b/main.html
@@ -47,6 +47,16 @@
         <div class="row">
             <div class="col-sm-6 col-md-8 storymap-map"></div>
             <div class="col-sm-6 col-md-4 storymap-story">
+                <section data-scene="overview">
+                    <div class="overview-background-img background-fullscreen-setting text-responsive">
+                        <h4 class="text-center" style="color:black;">Fish</h4><br>
+                        <h4 class="text-center" style="font-size:20px; margin-top:0px; color: #000000; text-shadow: gray 0.0em 0.0em 0.0em; margin-left: 25%; margin-right:25%; text-align:justify;">Most Oregon waters are home to multiple species of fish. Fish play a major role for regional indigenous groups, and are a proud food source. Urbanization and river engineering have dramatically altered fish habitats and migration
+                            paths, changing the dynamics of Oregon fish populations. The fish included in this chapter aren't comprehensive. Rather, they are the fish whose habitats have been surveyed by the Oregon Department of Fish and Wildlife.</h4>
+                        <br/><br/>
+                        <p class="text-center" style="font-size:14px; margin-top:0px; color: #000000; text-shadow: black 0em 0em 0em; margin-left: 30%; margin-right:30%; display:block;">Created by Gareth Baldrica-Franklin, Institute for Water and Watersheds, Oregon State University</p>
+                    </div>
+                    <br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/>
+                </section>
                 <section data-scene="scene1">
                     <h2>Rambling in Wisconsin</h2>
                     <p><em>"You can't say enough about fishing. Though the sport of kings, it's just what the deadbeat ordered."</em><br> ~ Thomas McGuane <cite>The Longest Silence</cite></p>
