--- a/main.html
+++ b/main.html
@@ -64,12 +64,13 @@
                 <section data-scene="scene2">
                     <h2>The Central Sands</h2>
                     <p>blah...blah..blah...blah...blah</p>
-                    <img src="./img/HomeWater.jpg" class="img-responsive" alt="responsive image" alt-text="the central sands of wisconsin">
+                    <img src="./build/img/HomeWater.jpg" class="img-responsive" alt="responsive image" alt-text="the central sands of wisconsin">
                     <p>blah...blah..blah...blah...blah</p>
                 </section>
                 <section data-scene="scene3">
                     <h2>The Driftless Area</h2>
                     <p></p>
+                    <img src="./build/img/IMG_0603.JPG" class="img-responsive" alt="responsive image" alt-text="the central sands of wisconsin">
                 </section>
             </div>
         </div>
