--- a/index.html
+++ b/index.html
@@ -248,6 +248,15 @@
 <!-- main javascript -->
 <script type="text/javascript">
 
+var geojsonMarkerOptions = {
+    radius: 5,
+    fillColor: "#3232ff",
+    color: "#ffff00",
+    weight: 0.5,
+    opacity: 1,
+    fillOpacity: 0.8
+};
+
 
     // Create Legend Contents in html format
     var county_legend = '<i style="background: orange; opacity: 0.5"></i><p><b>Counties</b></p>';
@@ -263,12 +272,12 @@
     var layers = {
         ESRI: {layer: L.tileLayer('http://server.arcgisonline.com/ArcGIS/rest/services/World_Imagery/MapServer/tile/{z}/{y}/{x}')},
         counties: {
-            layer: L.geoJson.ajax('../../assets/counties.geojson', {
-                color: 'orange',
-                weight: 2,
-                opacity: 0.3
-            }), legend: county_legend
-        },
+            layer: L.geoJson.ajax('https://raw.githubusercontent.com/jasparkatt/Storymaps/master/data/SpotX.geojson', {
+            pointToLayer: function(feature, latlng) {
+                return L.circleMarker(latlng, geojsonMarkerOptions).bindTooltip(feature.properties.Stream, { className: 'label_tooltip' });
+            }
+        })
+    },
         GEE: {
             layer: L.tileLayer('http://earthengine.google.org/static/hansen_2013/tree_alpha/{z}/{x}/{y}.png'),
             legend: forest_legend
@@ -287,7 +296,7 @@
         corvallis: {lat: 44.5701158, lng: -123.2949388, zoom: 14, name: 'Corvallis', layers: [layers.ESRI]},
         eugene: {lat: 44.0549563, lng: -123.0958048, zoom: 13, name: 'Eugene', layers: []},
         salem: {lat: 44.9419055, lng: -123.0356407, zoom: 13, name: 'Salem', layers: []},
-        bend: {lat: 44.0519385, lng: -121.3042125, zoom: 14, name: 'Bend', layers: [layers.counties, layers.satellite]},
+        bend: {lat: 44.0519385, lng: -89.3042125, zoom: 8, name: 'Bend', layers: [layers.counties, layers.satellite]},
         oregon: {lat: 44.0000000, lng: -123.5000000, zoom: 7, name: 'Oregon State', layers: [layers.GEE]},
         end: {lat: 44.0000000, lng: -123.5000000, zoom: 7, name: 'The End'}
     };
