--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                     <h1 class="display-4 d-flex justify-content-center">Flyfishing across Wisconsin</h1>
 
 
-                    <small class="d-flex justify-content-center" style="color: rgba(239, 243, 245, 0.945)"><p><em>"You can't say enough about fishing. Though the sport of kings, it's just what the deadbeat ordered."</em><br> ~ Thomas McGuane <cite>The Longest Silence</cite></p>
+                    <small class="d-flex justify-content-center" style="color: rgb(255, 255, 255)"><p><em>"You can't say enough about fishing. Though the sport of kings, it's just what the deadbeat ordered."</em><br> ~ Thomas McGuane <cite>The Longest Silence</cite></p>
                     </small>
                 </div>
             </section>
