--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 
     <!--story map plugin-->
     <script src="./src/storymap.2.5.js"></script>
-    <script src="./scripts/maincopy.js"></script>
+    <script src="../build/scripts/main.js"></script>
 </head>
 <body>
 
