fleshing out scenes

--- a/index.html
+++ b/index.html
@@ -64,8 +64,8 @@
                     </small>
                 </div>
             </section>
-            <section data-scene="portland">
-                <h2>Portland</h2>
+            <section data-scene="centralsands">
+                <h2>The Central Sands</h2>
                 <p>Portland is a seaport and the largest city in the U.S. state of Oregon and the seat of Multnomah
                     County. It is in the Willamette Valley region of the Pacific Northwest, at the confluence of the
                     Willamette and Columbia Rivers. The city covers 145 square miles (380 square kilometers) and had an
@@ -74,6 +74,8 @@
                     most populous MSA in the United States. Its Combined Statistical Area (CSA) ranks 17th with a
                     population of 3,022,178. Roughly 60% of Oregon's population resides within the Portland metropolitan
                     area.</p>
+                    <img src="../build/img/TUCaresphoto.jpg" class="img-responsive img-thumbnail" alt="responsive image"
+                     alt-text="the west branch">
                 <p>Named after Portland, Maine, the Oregon settlement began to be populated in the 1830s near the end of
                     the Oregon Trail. Its water access provided convenient transportation of goods, and the timber
                     industry was a major force in the city's early economy. At the turn of the 20th century, the city
