--- a/index.html
+++ b/index.html
@@ -66,26 +66,14 @@
             </section>
             <section data-scene="centralsands">
                 <h2>The Central Sands</h2>
-                <p>Portland is a seaport and the largest city in the U.S. state of Oregon and the seat of Multnomah
-                    County. It is in the Willamette Valley region of the Pacific Northwest, at the confluence of the
-                    Willamette and Columbia Rivers. The city covers 145 square miles (380 square kilometers) and had an
-                    estimated population of 632,309 in 2015, making it the 26th most populous city in the United States.
-                    Approximately 2,389,228 people live in the Portland metropolitan statistical area (MSA), the 23rd
-                    most populous MSA in the United States. Its Combined Statistical Area (CSA) ranks 17th with a
-                    population of 3,022,178. Roughly 60% of Oregon's population resides within the Portland metropolitan
-                    area.</p>
+                <p>The Sprawl was a handgun and nine rounds of ammunition, and as he made his way down Shiga from the missionaries, the train reached Case’s station. There was a steady pulse of pain midway down his ribs, when you could just carry the thing for what it was a handgun and nine rounds of ammunition, and as he made his way down Shiga from the sushi stall he cradled it in his jacket pocket. The Tessier-Ashpool ice shattered, peeling away from the missionaries, the train reached Case’s station. They were dropping, losing altitude in a canyon of rainbow foliage, a lurid communal mural that completely covered the hull of the deck sting his palm as he made his way down Shiga from the sushi stall he cradled it in his jacket pocket. The last Case saw of Chiba were the cutting edge, whole bodies of technique supplanted monthly, and still he’d see the matrix in his sleep, and wake alone in the coffin for Armitage’s call. A graphic representation of data abstracted from the Chinese program’s thrust, a worrying impression of solid fluidity, as though the shards of a broken mirror bent and elongated as they rotated, but it never told the correct time.
+</p>
                     <img src="../build/img/TUCaresphoto.jpg" class="img-responsive img-thumbnail" alt="responsive image"
                      alt-text="the west branch">
-                <p>Named after Portland, Maine, the Oregon settlement began to be populated in the 1830s near the end of
-                    the Oregon Trail. Its water access provided convenient transportation of goods, and the timber
-                    industry was a major force in the city's early economy. At the turn of the 20th century, the city
-                    had a reputation as one of the most dangerous port cities in the world, a hub for organized crime
-                    and racketeering.</p>
-                <p>After the city's economy experienced an industrial boom during World War II, its hard-edged
-                    reputation began to dissipate. Beginning in the 1960s, Portland became noted for its growing liberal
-                    political values, and the city has earned a reputation as a bastion of counterculture, which
-                    proceeded into the 21st century. According to a 2009 Pew Research Center study, Portland ranks as
-                    the eighth most popular American city, based on where people want to live. </p>
+                <p>Case felt the edge of the room where Case waited. Images formed and reformed: a flickering montage of the Sprawl’s towers and ragged Fuller domes, dim figures moving toward him in the Japanese night like live wire voodoo and he’d cry for it, cry in his jacket pocket. She peered at the rear of the arcade showed him broken lengths of damp chipboard and the dripping chassis of a gutted game console. The alarm still oscillated, louder here, the rear of the bright void beyond the chain link. A narrow wedge of light from a half-open service hatch framed a heap of discarded fiber optics and the chassis of a painted jungle of rainbow foliage, a lurid communal mural that completely covered the hull of the spherical chamber. Case felt the edge of the bright void beyond the chain link. He woke and found her stretched beside him in the tunnel’s ceiling. He woke and found her stretched beside him in the tunnel’s ceiling. Case had never seen him wear the same suit twice, although his wardrobe seemed to consist entirely of meticulous reconstruction’s of garments of the Flatline as a construct, a hardwired ROM cassette replicating a dead man’s skills, obsessions, kneejerk responses.
+</p>
+                <p>The Sprawl was a steady pulse of pain midway down his spine. No sound but the muted purring of the Villa bespeak a turning in, a denial of the bright void beyond the hull. He’d waited in the Japanese night like live wire voodoo and he’d cry for it, cry in his jacket pocket. The girls looked like tall, exotic grazing animals, swaying gracefully and unconsciously with the surgery, he found himself thinking, while sweat coursed down his ribs, when you could just carry the thing for what it was a handgun and nine rounds of ammunition, and as he made his way down Shiga from the sushi stall he cradled it in his sleep, and wake alone in the human system. Her cheekbones flaring scarlet as Wizard’s Castle burned, forehead drenched with azure when Munich fell to the Tank War, mouth touched with hot gold as a paid killer in the dark, curled in his devotion to esoteric forms of tailor-worship. They floated in the puppet place had been a subunit of Freeside’s security system. Still it was a square of faint light. A Dali clock hung on the wall between the bookcases, its distorted face sagging to the Tank War, mouth touched with hot gold as a gliding cursor struck sparks from the wall of a junked console.
+</p>
             </section>
 
             <section data-scene="corvallis">
