adding some more stuff

--- a/index.html
+++ b/index.html
@@ -76,8 +76,8 @@
 </p>
             </section>
 
-            <section data-scene="corvallis">
-                <h2>Corvallis</h2>
+            <section data-scene="wautoma">
+                <h2>Linch Pin Of The Sands</h2>
                 <p>Corvallis is a city in central western Oregon, United States. It is the county seat of Benton County
                     and the principal city of the Corvallis, Oregon Metropolitan Statistical Area, which encompasses all
                     of Benton County. As of the 2010 United States Census, the population was 54,462. Its population was
