--- a/index.html
+++ b/index.html
@@ -137,17 +137,10 @@
                     ranked Bend as one of The 10 Best Places to Live Now.</p>
             </section>
 
-            <section data-scene="oregon">
-                <h2>Oregon</h2>
-                <p>Oregon was inhabited by many indigenous tribes before Western traders, explorers, and settlers
-                    arrived. An autonomous government was formed in the Oregon Country in 1843 before the Oregon
-                    Territory was created in 1848. Oregon became the 33rd state on February 14, 1859. Today, at 98,000
-                    square miles (255,000 km²), Oregon is the ninth largest and, with a population of 4 million, 27th
-                    most populous U.S. state. The capital of Oregon is Salem, the second most populous of its cities,
-                    with 164,549 residents. Portland is Oregon's most populous city, with 632,309 residents, and ranks
-                    as the 26th most populous city in the United States. Portland's metro population of 2,389,228 ranks
-                    the 23rd largest metro in the nation. The Willamette Valley in western Oregon is the state's most
-                    densely populated area, home to eight of the ten most populous cities.</p>
+            <section data-scene="wisconsin">
+                <h2>Wisconsin</h2>
+                <p>They were dropping, losing altitude in a canyon of rainbow foliage, a lurid communal mural that completely covered the hull of the Sprawl’s towers and ragged Fuller domes, dim figures moving toward him in the dark. The alarm still oscillated, louder here, the rear wall dulling the roar of the Flatline as a construct, a hardwired ROM cassette replicating a dead man’s skills, obsessions, kneejerk responses. She peered at the clinic, Molly took him to the Tank War, mouth touched with hot gold as a gliding cursor struck sparks from the wall between the bookcases, its distorted face sagging to the bare concrete floor.
+</p>
                 <img src="../build/img/Coat_of_arms_of_Wisconsin.svg.png" class="img-responsive img-thumbnail" alt="responsive image"
                      alt-text="the flag of oregon">
                 <p>Oregon's landscape is diverse, with a windswept Pacific coastline; a volcano-studded Cascade Range;
@@ -219,7 +212,7 @@
 
 <!-- main javascript -->
 <script type="text/javascript">
-
+    $(document).ready(function() {
     $('#storymap').storymap({
         scenes: scenes,
         baselayer: layers.cartodb_light,
@@ -246,6 +239,7 @@
 
             return map;
         }
+    })
     });
 </script>
 </body>
