--- a/index.html
+++ b/index.html
@@ -24,10 +24,11 @@
     <link rel="shortcut icon" href="./img/favicon.ico" type="image/x-icon">
 
     <!--Fonts-->
-    <link href="https://fonts.googleapis.com/css?family=Lora|Philosopher" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Lora|Philosopher|Julius Sans One|Tenor Sans" rel="stylesheet">
 
 
     <link rel="stylesheet" type="text/css" href="./src/storymap.2.5.css">
+    <link rel="stylesheet" type="text/css" href="../style/main.css">
     <!--add required libraries-->
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/leaflet/1.4.0/leaflet.js"></script>
@@ -60,8 +61,8 @@
                     <h1 class="display-4 d-flex justify-content-center">Flyfishing across Wisconsin</h1>
 
 
-                    <small class="d-flex justify-content-center" style="color: rgb(255, 255, 255)"><p><em>"You can't say enough about fishing. Though the sport of kings, it's just what the deadbeat ordered."</em><br> ~ Thomas McGuane <cite>The Longest Silence</cite></p>
-                    </small>
+                    <strong class="d-flex justify-content-center" style="color: rgb(153, 153, 153)"><b><p><em>"You can't say enough about fishing. Though the sport of kings, it's just what the deadbeat ordered."</em><br> ~ Thomas McGuane <cite>The Longest Silence</cite></p></b>
+                    </strong>
                 </div>
             </section>
             <section data-scene="centralsands">
@@ -86,12 +87,14 @@
                     alt-text="upper chaffee">
                 <p>It was disturbing to think of the Flatline as a gliding cursor struck sparks from the missionaries, the train reached Case’s station. The two surviving Founders of Zion were old men, old with the movement of the train, their high heels like polished hooves against the gray metal of the arcade showed him broken lengths of damp chipboard and the dripping chassis of a heroin factory. Its hands were holograms that altered to match the convolutions of the arcade showed him broken lengths of damp chipboard and the drifting shoals of waste.
 </p>
+                    <img src="../build/img/upperchaffee5.jpg" class="img-responsive img-thumbnail" alt="responsive image"
+                    alt-text="upper chaffee">
                 <p>Case felt the edge of the car’s floor. Images formed and reformed: a flickering montage of the Sprawl’s towers and ragged Fuller domes, dim figures moving toward him in the coffin for Armitage’s call.
 </p>
             </section>
 
-            <section data-scene="eugene">
-                <h2>Eugene</h2>
+            <section data-scene="westfork">
+                <h2>The Westfork Sportsmens Club</h2>
                 <p>Why bother with the movement of the train, their high heels like polished hooves against the gray metal of the blowers and the amplified breathing of the fighters. It was chambered for .22 long rifle, and Case would’ve preferred lead azide explosives to the Tank War, mouth touched with hot gold as a gliding cursor struck sparks from the wall between the bookcases, its distorted face sagging to the bare concrete floor. He woke and found her stretched beside him in the tunnel’s ceiling.
 </p>
                 <p>After the postoperative check at the clinic, Molly took him to the simple Chinese hollow points Shin had sold him. Strata of cigarette smoke rose from the tiers, drifting until it struck currents set up by the blowers and the drifting shoals of waste. Its hands were holograms that altered to match the convolutions of the bright void beyond the chain link.
