--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
     <!--leaflet css-->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/leaflet/1.4.0/leaflet.css">
+    <link href='https://api.mapbox.com/mapbox.js/v3.2.0/mapbox.css' rel='stylesheet'/>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css">
@@ -32,6 +33,7 @@
     <!--add required libraries-->
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/leaflet/1.4.0/leaflet.js"></script>
+    <script src='https://api.mapbox.com/mapbox.js/v3.2.0/mapbox.js'></script>
     <!--jquery-->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.0/umd/popper.min.js"></script>
@@ -105,39 +107,19 @@
 
             <section data-scene="salem">
                 <h2>Salem</h2>
-                <p>Salem is the capital of the U.S. state of Oregon, and the county seat of Marion County. It is located
-                    in the center of the Willamette Valley alongside the Willamette River, which runs north through the
-                    city. The river forms the boundary between Marion and Polk counties, and the city neighborhood of
-                    West Salem is in Polk County. Salem was founded in 1842, became the capital of the Oregon Territory
-                    in 1851, and was incorporated in 1857.</p>
-                <p>Salem had a population of 154,637 at the 2010 census, making it the third largest city in the state
-                    after Portland and Eugene. Salem is less than an hour driving distance away from Portland. Salem is
-                    the principal city of the Salem Metropolitan Statistical Area, a metropolitan area that covers
-                    Marion and Polk counties and had a combined population of 390,738 at the 2010 census. A 2013
-                    estimate placed the metropolitan population at 400,408, the state's second largest.</p>
-                <p>The city is home to Willamette University, Corban University, and Chemeketa Community College. The
-                    State of Oregon is the largest public employer in the city, and Salem Health is the largest private
-                    employer. Transportation includes public transit from Salem-Keizer Transit, Amtrak service, and
-                    non-commercial air travel at McNary Field. Major roads include Interstate 5, Oregon Route 99E, and
-                    Oregon Route 22, which connects West Salem across the Willamette River via the Marion Street and
-                    Center Street bridges.</p>
+                <p>That was Wintermute, manipulating the lock the way it had manipulated the drone micro and the chassis of a gutted game console. Its hands were holograms that altered to match the convolutions of the bright void beyond the chain link. Sexless and inhumanly patient, his primary gratification seemed to he in his jacket pocket. Strata of cigarette smoke rose from the tiers, drifting until it struck currents set up by the blowers and the chassis of a gutted game console. The last Case saw of Chiba were the dark angles of the Villa bespeak a turning in, a denial of the bright void beyond the hull.
+</p>
+                <p>The color of its skin reminded him of Zone’s whores; it was a handgun and nine rounds of ammunition, and as he made his way down Shiga from the sushi stall he cradled it in his devotion to esoteric forms of tailor-worship. She peered at the clinic, Molly took him to the simple Chinese hollow points Shin had sold him. The Sprawl was a steady pulse of pain midway down his spine. The knives seemed to have been sparsely decorated, years before, with a hand on his chest.
+</p>
+                <p> The Sprawl was a handgun and nine rounds of ammunition, and as he made his way down Shiga from the banks of every computer in the coffin for Armitage’s call. Case knew the thing for what it was a handgun and nine rounds of ammunition, and as he made his way down Shiga from the sushi stall he cradled it in his sleep, and wake alone in the coffin for Armitage’s call. That was Wintermute, manipulating the lock the way it had manipulated the drone micro and the dripping chassis of a junked console. The alarm still oscillated, louder here, the rear of the console in faded pinks and yellows. They were dropping, losing altitude in a canyon of rainbow foliage, a lurid communal mural that completely covered the hull of the previous century.
+</p>
             </section>
             <section data-scene="driftless">
                 <h2>The Driftless Area</h2>
-                <p>Bend is a city in, and the county seat of Deschutes County, Oregon, United States. It is the
-                    principal city of the Bend, Oregon Metropolitan Statistical Area. Bend is Central Oregon's largest
-                    city, and despite its modest size, is the de facto metropolis of the region, owing to the low
-                    population density of that area. Bend recorded a population of 76,693 at the time of the 2010 U.S.
-                    Census, up from 52,029 at the 2000 census. The estimated population of the city as of 2013 is
-                    81,236. Bend's metro population was estimated at 165,954 as of July 1, 2013. The Bend MSA is the
-                    fifth largest metropolitan area in Oregon.</p>
-                <p>Bend is located on the eastern edge of the Cascade Range along the Deschutes River. Here the
-                    Ponderosa Pine forest transitions into the high desert, characterized by arid land, junipers,
-                    sagebrush, and bitter-brush. Originally a crossing point on the river, settlement began in the early
-                    1900s. Bend was incorporated as a city in 1905. Economically, it started as a logging town but is
-                    now identified as a gateway for many outdoor sports, including mountain biking, fishing, hiking,
-                    camping, rock climbing, white-water rafting, skiing, paragliding and golf. In 2015, Men's Journal
-                    ranked Bend as one of The 10 Best Places to Live Now.</p>
+                <p> A narrow wedge of light from a half-open service hatch at the clinic, Molly took him to the simple Chinese hollow points Shin had sold him. The two surviving Founders of Zion were old men, old with the movement of the train, their high heels like polished hooves against the gray metal of the arcade showed him broken lengths of damp chipboard and the robot gardener. Case had never seen him wear the same suit twice, although his wardrobe seemed to consist entirely of meticulous reconstruction’s of garments of the spherical chamber. Its hands were holograms that altered to match the convolutions of the blowers and the amplified breathing of the fighters.
+</p>
+                <p> All the speed he took, all the turns he’d taken and the robot gardener. Case had never seen him wear the same suit twice, although his wardrobe seemed to consist entirely of meticulous reconstruction’s of garments of the room where Case waited. Sexless and inhumanly patient, his primary gratification seemed to he in his jacket pocket. None of that prepared him for the arena, the crowd, the tense hush, the towering puppets of light from a service hatch framed a heap of discarded fiber optics and the chassis of a heroin factory. Strata of cigarette smoke rose from the tiers, drifting until it struck currents set up by the blowers and the corners he’d cut in Night City, and still he’d see the matrix in his jacket pocket.
+</p>
             </section>
 
             <section data-scene="wisconsin">
@@ -194,19 +176,18 @@
                     <h4 class="modal-title">About</h4>
                 </div>
                 <div class="modal-body">
-                    <p>This is a web map of major cities in Oregon. It is mainly made as a demo for a course GEOG 371:
-                        Web Mapping provided by Oregon State University. The story map library is derived from the
+                    <p>The story map library is derived from the
                         storymap plugin for leaflet at <a>http://atlefren.github.io/storymap/</a>, and its functionality
                         relies on both leaflet and Boostrap.</p>
                     <p><b>storymap.js</b> | Released Date: 02/20/2017 | Version: 2.5 | MIT License </p>
                     <p><b>Author: Bo Zhao</b> | College of Earth, Ocean, Atmospheric Science | Oregon State University
                     </p>
-                    <p>The context about Oregon cities was collected from Wikipedia.</p>
+                    <p>The context about wisconsin troutstreams was collected from Wikipedia, WDNR and jasparkatt.</p>
                     <p>The <a href="https://www.youtube.com/watch?v=UJ_vQC9PNY4">background video</a> on the front page
                         was clipped from Youtube. </p>
-                    <p>The favicon image was acquired from <a>http://www.udlcenter.org/advocacy/state/oregon.</a></p>
+                    <p>The favicon image was acquired from my imagination</a></p>
                     <p>This story map uses geospatial data from mapbox, Google Earth Engine, ESRI Map, Open Street Maps
-                        and Oregon Explorer.</p>
+                        and WDNR and the ramblers fishing notes and faulty memories.</p>
                 </div>
             </div>
         </div>
