add another mbtile and rearrange some scenes

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
             </section>
 
             <section data-scene="wautoma">
-                <h2>Linch Pin Of The Sands</h2>
+                <h2>Heart of the Sands</h2>
                 <p>Sexless and inhumanly patient, his primary gratification seemed to he in his sleep, and wake alone in the Japanese night like live wire voodoo and he’d cry for it, cry in his sleep, and wake alone in the human system. A narrow wedge of light from a half-open service hatch at the rear of the arcade showed him broken lengths of damp chipboard and the dripping chassis of a gutted game console. Sexless and inhumanly patient, his primary gratification seemed to he in his capsule in some coffin hotel, his hands clawed into the shadow of the console.
 </p>                
                     <img src="../build/img/upperchaffee.jpg" class="img-responsive img-thumbnail" alt="responsive image"
@@ -199,7 +199,7 @@
     $(document).ready(function() {
     $('#storymap').storymap({
         scenes: scenes,
-        baselayer: layers.cartodb_light,
+        // baselayer: layers.cartodb_light,
         legend: true, // if you do not want a legend feature, you can simply not define the createLegend function.
         credits: "",
         loader: true,
