cleaning some stuff up

--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
         credits: "",
         loader: true,
         scalebar: false,
-        flyo: true,
+        flyto: true,
         navwidget: true,
 
         createMap: function () {
