--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@
                 position: 'bottomright'
             }).addTo(map);
 
-
+            new L.Control.Zoom({ position: 'bottomright'}).addTo(map);
             return map;
         }
     })
