--- a/index.html
+++ b/index.html
@@ -44,12 +44,12 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/leaflet-ajax/2.1.0/leaflet.ajax.min.js"></script>
 
     <!--mini globle map-->
-    <script src="./src/d3.min.js"></script>
+    <script src="../build/src/d3.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/topojson/1.6.19/topojson.min.js"></script>
-    <script src="./src/globeminimap.js"></script>
+    <script src="../build/src/globeminimap.js"></script>
 
     <!--story map plugin-->
-    <script src="./src/storymap.2.5.js"></script>
+    <script src="../build/src/storymap.2.5.js"></script>
     <script src="../build/scripts/main.js"></script>
 </head>
 <body>
@@ -221,9 +221,7 @@
             //add an miniglobe
             new L.Control.GlobeMiniMap({
                 marker: 'red',
-                position: 'bottomright',
-                land: '##C99700',
-                water: '##0017C9'
+                position: 'bottomright'
             }).addTo(map);
 
             new L.Control.Zoom({ position: 'bottomright'}).addTo(map);
