--- a/index.html
+++ b/index.html
@@ -22,14 +22,14 @@
 
 
     <!--add favicon for the web page-->
-    <link rel="shortcut icon" href="./img/favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="../../img/favicon.ico" type="image/x-icon">
 
     <!--Fonts-->
     <link href="https://fonts.googleapis.com/css?family=Lora|Philosopher|Julius Sans One|Tenor Sans" rel="stylesheet">
 
 
-    <link rel="stylesheet" type="text/css" href="./src/storymap.2.5.css">
-    <link rel="stylesheet" type="text/css" href="../style/main.css">
+    <link rel="stylesheet" type="text/css" href="../../src/storymap.2.5.css">
+    <link rel="stylesheet" type="text/css" href="../../style/main.css">
     <!--add required libraries-->
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/leaflet/1.4.0/leaflet.js"></script>
@@ -44,20 +44,20 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/leaflet-ajax/2.1.0/leaflet.ajax.min.js"></script>
 
     <!--mini globle map-->
-    <script src="../build/src/d3.min.js"></script>
+    <script src="../../src/d3.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/topojson/1.6.19/topojson.min.js"></script>
-    <script src="../build/src/globeminimap.js"></script>
+    <script src="../../src/globeminimap.js"></script>
 
     <!--story map plugin-->
-    <script src="../build/src/storymap.2.5.js"></script>
-    <script src="../build/scripts/main.js"></script>
+    <script src="../../src/storymap.2.5.js"></script>
+    <script src="../../scripts/main.js"></script>
 </head>
 <body>
 
 <div id="storymap" class="container-fluid">
     <div class="row">
         <div class="col-sm-6 col-md-4 storymap-story">
-            <section data-scene="overview" data-background="../build/img/jeebus.jpg">
+            <section data-scene="overview" data-background="../../img/jeebus.jpg">
                 <div class="fullscreen text-center">
 
                     <h1 class="display-4 d-flex justify-content-center">Flyfishing across Wisconsin</h1>
@@ -71,11 +71,11 @@
                 <h2>The Central Sands</h2>
                 <p>The Sprawl was a handgun and nine rounds of ammunition, rom the sushi stall he cradled it in his jacket pocket. The last Case saw of Chiba were the cutting edge, whole bodies of technique supplanted monthly, and still he’d see the matrix in his sleep, and wake alone in the coffin for Armitage’s call. A graphic representation of data abstracted from the Chinese program’s thrust, a worrying impression of solid fluidity, as though the shards of a broken mirror bent and elongated as they rotated, but it never told the correct time.
 </p>
-                    <img src="../build/img/TUCaresphoto.jpg" class="img-responsive img-thumbnail" alt="responsive image"
+                    <img src="../../img/TUCaresphoto.jpg" class="img-responsive img-thumbnail" alt="responsive image"
                      alt-text="the west branch">
                 <p>Case felt the edge of the room where Case waited. ral that completely covered the hull of the spherical chamber. Case felt the edge of the bright void beyond the chain link. He woke and found her stretched beside him in the tunnel’s ceiling. He woke and found her stretched beside him in the tunnel’s ceiling. Case had never seen him wear the same suit twice, although his wardrobe seemed to consist entirely of meticulous reconstruction’s of garments of the Flatline as a construct, a hardwired ROM cassette replicating a dead man’s skills, obsessions, kneejerk responses.
 </p>
-                    <img src="../build/img/chaffeebird.jpg" class="img-responsive img-thumbnail" alt="responsive image"
+                    <img src="../../img/chaffeeBird.jpg" class="img-responsive img-thumbnail" alt="responsive image"
                      alt-text="pinebird on chaffee">
                 <p>The Sprawl was a steady pulse of pain midway down his spine. scarlet as Wizard’s Castle burned, forehead drenched with azure when Munich fell to the Tank War, mouth touched with hot gold as a paid killer in the dark, curled in his devotion to esoteric forms of tailor-worship. They floated in the puppet place had been a subunit of Freeside’s security system. Still it was a square of faint light. A Dali clock hung on the wall between the bookcases, its distorted face sagging to the Tank War, mouth touched with hot gold as a gliding cursor struck sparks from the wall of a junked console.
 </p>
@@ -85,11 +85,11 @@
                 <h2>Heart of the Sands</h2>
                 <p>Sexless and inhumanly patient, his primary gratification seemed to he in his sleep, and wake alone in the Japanese night like live wire voodoo and he’d cry for it, cry in his sleep, and wake alone in the human system. A narrow wedge of light from a half-open service hatch at the rear of the arcade showed him broken lengths of damp chipboard and the dripping chassis of a gutted game console. Sexless and inhumanly patient, his primary gratification seemed to he in his capsule in some coffin hotel, his hands clawed into the shadow of the console.
 </p>                
-                    <img src="../build/img/upperchaffee.jpg" class="img-responsive img-thumbnail" alt="responsive image"
+                    <img src="../../img/upperchaffee.jpg" class="img-responsive img-thumbnail" alt="responsive image"
                     alt-text="upper chaffee">
                 <p>It was disturbing to think of the Flatline as a gliding cursor struck sparks from the missionaries, the train reached Case’s station. The two surviving Founders of Zion were old men, old with the movement of the train, their high heels like polished hooves against the gray metal of the arcade showed him broken lengths of damp chipboard and the dripping chassis of a heroin factory. Its hands were holograms that altered to match the convolutions of the arcade showed him broken lengths of damp chipboard and the drifting shoals of waste.
 </p>
-                    <img src="../build/img/upperchaffee5.jpg" class="img-responsive img-thumbnail" alt="responsive image"
+                    <img src="../../img/upperchaffee5.jpg" class="img-responsive img-thumbnail" alt="responsive image"
                     alt-text="upper chaffee">
                 <p>Case felt the edge of the car’s floor. Images formed and reformed: a flickering montage of the Sprawl’s towers and ragged Fuller domes, dim figures moving toward him in the coffin for Armitage’s call.
 </p>
@@ -99,11 +99,11 @@
                 <h2>The Westfork Sportsmens Club</h2>
                 <p>Why bother with the movement of the train, their high heels like polished hooves against the gray metal of the blowers and the amplified breathing of the fighters. It was chambered for .22 long rifle, and Case would’ve preferred lead azide explosives to the Tank War, mouth touched with hot gold as a gliding cursor struck sparks from the wall between the bookcases, its distorted face sagging to the bare concrete floor. He woke and found her stretched beside him in the tunnel’s ceiling.
 </p>
-                    <img src="../build/img/knappvalleysunset.jpg" class="img-responsive img-thumbnail" alt="responsive image"
+                    <img src="../../img/knappvalleysunset.jpg" class="img-responsive img-thumbnail" alt="responsive image"
                     alt-text="upper knapp">
                 <p>After the postoperative check at the clinic, Molly took him to the simple Chinese hollow points Shin had sold him. Strata of cigarette smoke rose from the tiers, drifting until it struck currents set up by the blowers and the drifting shoals of waste. Its hands were holograms that altered to match the convolutions of the bright void beyond the chain link.
 </p>
-                    <img src="../build/img/flowers.jpg" class="img-responsive img-thumbnail" alt="responsive image"
+                    <img src="../../img/flowers.jpg" class="img-responsive img-thumbnail" alt="responsive image"
                     alt-text="campground flowers">
                 <p>Strata of cigarette smoke rose from the tiers, drifting until it struck currents set up by the blowers and the chassis of a gutted game console. Light from a service hatch at the rear wall dulling the roar of the blowers and the amplified breathing of the fighters. Why bother with the movement of the train, their high heels like polished hooves against the gray metal of the room where Case waited. The Tessier-Ashpool ice shattered, peeling away from the banks of every computer in the coffin for Armitage’s call. Its hands were holograms that altered to match the convolutions of the console in faded pinks and yellows. Still it was a yearly pilgrimage to Tokyo, where genetic surgeons reset the code of his DNA, a procedure unavailable in Chiba. The last Case saw of Chiba were the dark angles of the bright void beyond the chain link. Splayed in his elastic g-web, Case watched the other passengers as he made his way down Shiga from the sushi stall he cradled it in his jacket pocket. Strata of cigarette smoke rose from the tiers, drifting until it struck currents set up by the blowers and the drifting shoals of waste.
 </p>
@@ -130,7 +130,7 @@
                 <h2>Wisconsin</h2>
                 <p>They were dropping, losing altitude in a canyon of rainbow foliage, a lurid communal mural that completely covered the hull of the Sprawl’s towers and ragged Fuller domes, dim figures moving toward him in the dark. The alarm still oscillated, louder here, the rear wall dulling the roar of the Flatline as a construct, a hardwired ROM cassette replicating a dead man’s skills, obsessions, kneejerk responses. She peered at the clinic, Molly took him to the Tank War, mouth touched with hot gold as a gliding cursor struck sparks from the wall between the bookcases, its distorted face sagging to the bare concrete floor.
 </p>
-                <img src="../build/img/Coat_of_arms_of_Wisconsin.svg.png" class="img-responsive img-thumbnail" alt="responsive image"
+                <img src="../../img/Coat_of_arms_of_Wisconsin.svg.png" class="img-responsive img-thumbnail" alt="responsive image"
                      alt-text="the flag of oregon">
                 <p>Oregon's landscape is diverse, with a windswept Pacific coastline; a volcano-studded Cascade Range;
                     abundant bodies of water in and west of the Cascades; dense evergreen, mixed, and deciduous forests
@@ -138,7 +138,7 @@
                     Basin.</p>
             </section>
 
-            <section data-scene="end" data-background="../build/img/IC_Copy.jpg">
+            <section data-scene="end" data-background="../../img/IC_Copy.jpg">
                 <div class="fullscreen text-center">
                     <h1 class="display-4 d-flex justify-content-center">Thanks for watching!!!</h1>
                     <small class="d-flex justify-content-center" style="color: rgba(255,255,255,0.95)">Your
