--- a/index.html
+++ b/index.html
@@ -230,5 +230,8 @@
     })
     });
 </script>
+<script id="__bs_script__">//<![CDATA[
+    document.write("<script async src='http://HOST:3028/browser-sync/browser-sync-client.js?v=2.26.7'><\/script>".replace("HOST", location.hostname));
+//]]></script>
 </body>
 </html>
