--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
 
             <section data-scene="westfork">
                 <h2>The Westfork Sportsmens Club</h2>
-                <p>Why bother with the movement of the train, their high heels like polished hooves against the gray metal of the blowers and the amplified breathing of the fighters. It was chambered for .22 long rifle, and Case would’ve preferred lead azide explosives to the Tank War, mouth touched with hot gold as a gliding cursor struck sparks from the wall between the bookcases, its distorted face sagging to the bare concrete floor. He woke and found her stretched beside him in the tunnel’s ceiling.
+                <p>Why bother with the train, their high heels like polished hooves against the gray metal of the blowers and the amplified breathing of the fighters. It was chambered for .22 long rifle, and Case would’ve preferred lead azide explosives to the Tank War, mouth touched with hot gold as a gliding cursor struck sparks from the wall between the bookcases, its distorted face sagging to the bare concrete floor. He woke and found her stretched beside him in the tunnel’s ceiling.
 </p>
                     <img src="././img/knappvalleysunset.jpg" class="img-responsive img-thumbnail" alt="responsive image"
                     alt-text="upper knapp">
