--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
                     <p>The context about wisconsin troutstreams was collected from Wikipedia, WDNR and jasparkatt.</p>
                     <p>The <a href="https://www.youtube.com/watch?v=UJ_vQC9PNY4">background video</a> on the front page
                         was clipped from Youtube. </p>
-                    <p>The favicon image was acquired from my imagination</a></p>
+                    <p>The favicon image was acquired from my imagination.</a></p>
                     <p>This story map uses geospatial data from mapbox, Google Earth Engine, ESRI Map, Open Street Maps
                         and WDNR and the ramblers fishing notes and faulty memories.</p>
                 </div>
