--- a/index.html
+++ b/index.html
@@ -57,13 +57,13 @@
 <div id="storymap" class="container-fluid">
     <div class="row">
         <div class="col-sm-6 col-md-4 storymap-story">
-            <section data-scene="overview" data-background="././img/jeebus.jpg">
+            <section data-scene="overview" data-background="././img/jeebus.JPG">
                 <div class="fullscreen text-center">
 
                     <h1 class="display-4 d-flex justify-content-center">Flyfishing across Wisconsin</h1>
 
 
-                    <small class="d-flex justify-content-center" style="color: rgb(221, 243, 248)"><b><p><em>"You can't say enough about fishing. Though the sport of kings, it's just what the deadbeat ordered."</em><br> ~ Thomas McGuane <cite>The Longest Silence</cite></p></b>
+                    <small class="d-flex justify-content-center" style="color: rgb(255, 250, 240)"><b><p><em>"You can't say enough about fishing. Though the sport of kings, it's just what the deadbeat ordered."</em><br> ~ Thomas McGuane <cite>The Longest Silence</cite></p></b>
                     </small>
                 </div>
             </section>
